feature/3.2/metric events (#99)
Event Server - will only ever be available on 3.2
Sonar version bump
Gradle version bump
System lambda version bump

---------

Co-authored-by: cklellie <christopherjkelly@gmail.com>