@@ -12,21 +12,14 @@ buildscript {
     }
 }
 
+
 plugins {
-    id 'org.sonarqube' version '2.7'
+  id("org.sonarqube") version "4.4.1.3373"
 }
 
 apply from: 'testsourcesets.gradle'
 
 defaultTasks 'build'
-
-sonarqube {
-    properties {
-        properties["sonar.host.url"] = 'http://localhost:9000'
-        properties["sonar.verbose"] = "true"
-        properties['sonar.java.source'] = 8
-    }
-}
 
 allprojects{
   tasks.withType(JavaCompile) { 
@@ -36,20 +29,43 @@ allprojects{
   }
   repositories {
     mavenCentral()
-    }
+  } 
 }
 
-subprojects{
+subprojects{  
+  sonar {
+    properties {
+        properties["sonar.host.url"] = 'http://localhost:9000'
+        properties["sonar.verbose"] = "true"
+        properties['sonar.java.source'] = 17
+     }
+  }
+  apply plugin: 'jacoco'
   apply from: "$rootProject.projectDir/versions.gradle"
   apply plugin: 'java-library'
   apply from: "$rootProject.projectDir/publish.gradle"
   test {
+    finalizedBy jacocoTestReport
     useJUnitPlatform()
       testLogging {
         events "passed", "skipped", "failed"
       }
     }
+
+  jacocoTestReport {
+    reports {
+      xml.required = true
+      csv.required = false
+    }
+  }
+
+  test{
+    jvmArgs '--add-opens=java.base/java.lang=ALL-UNNAMED', '--add-opens=java.base/java.util=ALL-UNNAMED'
+  }
 }
+
+// always run tests when running sonar
+rootProject.tasks['sonar'].dependsOn.add(subprojects.tasks['test'])
 
 task dist(type: Sync) {
     allprojects { p ->
